# kaisui

./: .dockerignore  .editorconfig  .envrc  .gitignore  README.md  cabal.project  docker-compose.yml  flake.nix  fourmolu.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: check.yml
docs/: distributed-process-tcp.md  ractor-cluster.md
kaisui-distributed-process/: Dockerfile  cabal.project  fourmolu.yaml  hie.yaml  kaisui-distributed-process.cabal
kaisui-distributed-process/app/: Client.hs  Server.hs
kaisui-distributed-process/src/Control/Distributed/Kaisui/: Client.hs  HasClass.hs  Message.proto  Server.hs  TextMessage.hs  TextMessagePB.hs  Transport.hs  Type.hs  Types.hs
kaisui-distributed-process/test/Control/: DistributedSpec.hs
kaisui-distributed-process/test/Control/Distributed/: KaisuiSpec.hs
kaisui-ractor/: Cargo.toml  Dockerfile
kaisui-ractor/src/: client.rs  lib.rs  main.rs  server.rs
kaisui-ractor/src/actors/: mod.rs  registry_actor.rs  text_actor.rs  transport_client_actor.rs
kaisui-ractor/src/communication/: mod.rs
kaisui-ractor/src/messages/: mod.rs
kaisui-ractor/src/testing/: mod.rs
kaisui-ractor/src/transport/: mod.rs  tcp.rs
kaisui-ractor/tests/: kaisui_messaging_test.rs  ractor_integration_test.rs
kaisui-xtra/: Cargo.toml
kaisui-xtra/src/: main.rs
kaisui-xtra/tests/: xtra_integration_test.rs
network-transport-kaisui/: cabal.project  compile-protos.sh  hie.yaml  network-transport-kaisui.cabal
network-transport-kaisui/app/: TestRactorConnect.hs
network-transport-kaisui/proto/: kaisui.proto
network-transport-kaisui/proto/ractor_cluster/: auth.proto  control.proto  meta.proto  node.proto
network-transport-kaisui/src/Network/Transport/: Kaisui.hs
network-transport-kaisui/src/Network/Transport/Kaisui/: Accept.hs  Adapter.hs  Addr.hs  AddrInfo.hs  Address.hs  Connect.hs  Connection.hs  CreateTransport.hs  EndPoint.hs  Error.hs  HasLens.hs  NewEndPoint.hs  Parameters.hs  Protocol.hs  Receive.hs  Transport.hs  TransportAddrInfo.hs
network-transport-kaisui/src/Network/Transport/Kaisui/Type/: Connection.hs  ConnectionState.hs  EndPoint.hs  FrameHeader.hs  FrameType.hs  Transport.hs  TransportState.hs
network-transport-kaisui/src/Proto/Kaisui/: CloseConnection.hs  CloseEndPoint.hs  ConnectionRequest.hs  ConnectionResponse.hs  DataMessage.hs  Envelope.hs
network-transport-kaisui/src/Proto/RactorCluster/: Auth.hs  Control.hs  Meta.hs  Node.hs
network-transport-kaisui/test/Network/Transport/: KaisuiSpec.hs
network-transport-kaisui/test/Network/Transport/Kaisui/: AcceptSpec.hs  AddressSpec.hs  ConnectSpec.hs  ConnectionSpec.hs  EndPointSpec.hs  ProtocolSpec.hs  ReceiveSpec.hs  TestHelper.hs
network-transport-kaisui/test/Network/Transport/Kaisui/Type/: ConnectionStateSpec.hs  FrameHeaderSpec.hs  FrameTypeSpec.hs  TransportStateSpec.hs
