cabal-version: 3.0
name: kaisui-distributed-process
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
author: ncaq
maintainer: ncaq@ncaq.net
category: Control
build-type: Simple

common basic
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -j

  default-language: GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImportQualifiedPost
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies
    ViewPatterns

  build-depends:
    base,
    binary,
    bytestring,
    distributed-process,
    network,
    network-transport,
    network-transport-tcp,
    template-haskell,
    text,

library
  import: basic
  hs-source-dirs: src
  -- cabal-gild: discover ./src
  exposed-modules:
    Control.Distributed.Kaisui.Client
    Control.Distributed.Kaisui.Server
    Control.Distributed.Kaisui.Transport
    Control.Distributed.Kaisui.Types

executable server
  import: basic
  hs-source-dirs: app
  main-is: Server.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    kaisui-distributed-process

executable client
  import: basic
  hs-source-dirs: app
  main-is: Client.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    kaisui-distributed-process

test-suite kaisui-distributed-process-test
  import: basic
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    kaisui-distributed-process,
    sydtest,

  build-tool-depends:
    sydtest-discover:sydtest-discover

  type: exitcode-stdio-1.0
  -- cabal-gild: discover ./test --exclude=test/Main.hs
  other-modules: Control.DistributedSpec
