[package]
name = "kaisui-ractor"
version = "0.1.0"
edition = "2024"

[lib]
name = "kaisui_ractor"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-trait = "0.1"
hex = "0.4"
ractor = { version = "0.15", features = ["async-trait", "cluster", "monitors"] }
ractor_cluster = { version = "0.15", features = ["async-trait", "monitors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tracing-test = "0.2"
