cabal-version: 3.0
name: network-transport-kaisui
version: 0.1.0.0
synopsis: Network transport implementation for Kaisui distributed system
homepage: https://github.com/ncaq/kaisui
license: Apache-2.0
license-file: LICENSE
author: ncaq
maintainer: ncaq@ncaq.net
category: Network
build-type: Simple

common basic
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -j

  default-language: GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoImportQualifiedPost
    OverloadedStrings
    PartialTypeSignatures
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies
    ViewPatterns

  build-depends:
    aeson,
    base,
    convertible,
    exceptions,
    hashable,
    lens,
    megaparsec,
    mtl,
    network,
    network-transport,
    quic,
    random,
    rio,
    unliftio,

library
  import: basic
  -- cabal-gild: discover ./src
  exposed-modules:
    Network.Transport.Kaisui
    Network.Transport.Kaisui.Addr
    Network.Transport.Kaisui.AddrInfo
    Network.Transport.Kaisui.CreateTransport
    Network.Transport.Kaisui.EndPoint
    Network.Transport.Kaisui.Parameters
    Network.Transport.Kaisui.Transport
    Network.Transport.Kaisui.TransportAddrInfo

  hs-source-dirs: src

test-suite network-transport-kaisui-test
  import: basic
  hs-source-dirs: test
  main-is: Main.hs
  -- QuickCheckのインスタンスを定義する必要があるので仕方なく孤立インスタンスの警告を無効化している。
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wno-orphans

  build-depends:
    QuickCheck,
    distributed-process,
    distributed-process-async,
    distributed-process-client-server,
    distributed-process-execution,
    distributed-process-extras,
    network-transport-kaisui,
    quickcheck-instances,
    sydtest,

  build-tool-depends:
    sydtest-discover:sydtest-discover

  type: exitcode-stdio-1.0
  -- cabal-gild: discover ./test --exclude=test/Main.hs
  other-modules:
